unpackaged/main/default/objects/dfsle__EnvelopeConfiguration__c/dfsle__EnvelopeConfiguration__c.object-meta.xml
<CustomObject>
    <label>DocuSign Envelope Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Envelope Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>