unpackaged/main/default/objects/dfsle__EnvelopeConfiguration__c/fields/dfsle__Action__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prepare</fullName>
                <default>true</default>
                <label>Prepare</label>
            </value>
            <value>
                <fullName>Tag</fullName>
            </value>
            <value>
                <fullName>Send</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>