unpackaged/main/default/objects/dfsle__EnvelopeConfiguration__c/fields/dfsle__Active__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>