unpackaged/main/default/objects/dfsle__EnvelopeConfiguration__c/fields/dfsle__AddSourceDocuments__c.field-meta.xml
<CustomField>
    <fullName>dfsle__AddSourceDocuments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Salesforce source documents</label>
    <type>Checkbox</type>
</CustomField>