unpackaged/main/default/objects/dfsle__EnvelopeConfiguration__c/fields/dfsle__EmailSubject__c.field-meta.xml
<CustomField>
    <fullName>dfsle__EmailSubject__c</fullName>
    <description>Email Subject</description>
    <label>Email subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>