unpackaged/main/default/objects/dfsle__EnvelopeConfiguration__c/fields/dfsle__IsQuickSend__c.field-meta.xml
<CustomField>
    <fullName>dfsle__IsQuickSend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Quick Send</label>
    <type>Checkbox</type>
</CustomField>