unpackaged/main/default/objects/dfsle__EnvelopeConfiguration__c/fields/dfsle__MergeFields__c.field-meta.xml
<CustomField>
    <fullName>dfsle__MergeFields__c</fullName>
    <label>Merge Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>