unpackaged/main/default/objects/dfsle__EnvelopeConfiguration__c/fields/dfsle__Notifications__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Notifications__c</fullName>
    <label>Notifications</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>