unpackaged/main/default/objects/dfsle__EnvelopeConfiguration__c/fields/dfsle__ObjectType__c.field-meta.xml
<CustomField>
    <fullName>dfsle__ObjectType__c</fullName>
    <label>Object type</label>
    <type>TextArea</type>
</CustomField>