unpackaged/main/default/objects/dfsle__EnvelopeConfiguration__c/fields/dfsle__Remind__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Remind__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remind signers via email</label>
    <type>Checkbox</type>
</CustomField>