unpackaged/main/default/objects/dfsle__EnvelopeConfiguration__c/fields/dfsle__RemindAfterDays__c.field-meta.xml
<CustomField>
    <fullName>dfsle__RemindAfterDays__c</fullName>
    <label>Send reminder in N day(s)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>