unpackaged/main/default/objects/dfsle__EnvelopeConfiguration__c/fields/dfsle__RemindFrequencyDays__c.field-meta.xml
<CustomField>
    <fullName>dfsle__RemindFrequencyDays__c</fullName>
    <label>Remind every N day(s) until complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>