unpackaged/main/default/objects/dfsle__EnvelopeConfiguration__c/fields/dfsle__SenderDocuSignUserName__c.field-meta.xml
<CustomField>
    <fullName>dfsle__SenderDocuSignUserName__c</fullName>
    <formula>dfsle__Sender__r.dfsle__Username__c</formula>
    <label>Sender DocuSign UserName</label>
    <type>Text</type>
</CustomField>