unpackaged/main/default/objects/dfsle__EnvelopeConfiguration__c/fields/dfsle__SendingExperience__c.field-meta.xml
<CustomField>
    <fullName>dfsle__SendingExperience__c</fullName>
    <label>Sending Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>edit</fullName>
                <default>true</default>
                <label>edit</label>
            </value>
            <value>
                <fullName>quickSend</fullName>
            </value>
            <value>
                <fullName>tag</fullName>
            </value>
            <value>
                <fullName>send</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>