unpackaged/main/default/objects/dfsle__EnvelopeConfiguration__c/fields/dfsle__ShowChatterSettings__c.field-meta.xml
<CustomField>
    <fullName>dfsle__ShowChatterSettings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Chatter settings</label>
    <type>Checkbox</type>
</CustomField>