unpackaged/main/default/objects/dfsle__EnvelopeConfiguration__c/fields/dfsle__ShowRemindExpire__c.field-meta.xml
<CustomField>
    <fullName>dfsle__ShowRemindExpire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show remind and expire settings</label>
    <type>Checkbox</type>
</CustomField>