unpackaged/main/default/objects/dfsle__EnvelopeConfiguration__c/fields/dfsle__ShowSendButton__c.field-meta.xml
<CustomField>
    <fullName>dfsle__ShowSendButton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show send button</label>
    <type>Checkbox</type>
</CustomField>