unpackaged/main/default/objects/dfsle__EnvelopeConfiguration__c/fields/dfsle__SourceObject__c.field-meta.xml
<CustomField>
    <fullName>dfsle__SourceObject__c</fullName>
    <label>Source Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>