unpackaged/main/default/objects/dfsle__EnvelopeConfiguration__c/listViews/dfsle__All.listView-meta.xml
<ListView>
    <fullName>dfsle__All</fullName>
    <columns>NAME</columns>
    <columns>dfsle__SourceObject__c</columns>
    <columns>dfsle__IsDraft__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>